force-app/main/default/objects/Pdf_Storage__c/Pdf_Storage__c.object-meta.xml
<CustomObject>
    <label>PDF Storage</label>
    <pluralLabel>PDF Storages</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>PDF Name</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Stores PDF documents that can be sent via email</description>
</CustomObject> 