force-app/main/default/objects/Pdf_Storage__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField> 