force-app/main/default/objects/Pdf_Storage__c/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <defaultValue>application/pdf</defaultValue>
    <label>Content Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 